--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="amazon-root"></div>
     <script type="text/javascript">
-        console.log('oneee')
+        console.log('twoo')
         window.onAmazonLoginReady = function() {
         amazon.Login.setClientId('amzn1.application-oa2-client.75c23d174578409eacbbf5c666b10bad');
         };
@@ -23,6 +23,8 @@
         Amazon
      </a>
      <script type="text/javascript">
+     options = {};
+  options.scope = 'profile';
         document.getElementById('LoginWithAmazon').onclick = function() {
             amazon.Login.authorize(options, function(response) {
      if ( response.error ) {
