--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   options.scope = 'profile';
         document.getElementById('LoginWithAmazon').onclick = function() {
             amazon.Login.authorize(options, function(response) {
+                console.log('Inside authorizing')
      if ( response.error ) {
        alert('oauth error ' + response.error);
        return;
