--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="amazon-root"></div>
     <script type="text/javascript">
-        console.log('one')
+        console.log('twoo')
         window.onAmazonLoginReady = function() {
         amazon.Login.setClientId('amzn1.application-oa2-client.75c23d174578409eacbbf5c666b10bad');
         };
@@ -25,15 +25,18 @@
      <script type="text/javascript">
      options = {};
   options.scope = 'profile';
-        document.getElementById('LoginWithAmazon').onclick = function() {
-            amazon.Login.authorize(options, function(response) {
-                console.log('Inside authorizing')
+  amazon.Login.authorize(options, function(response) {
      if ( response.error ) {
        alert('oauth error ' + response.error);
        return;
      }
-     console.log('res.amazon',response)
-            })
-        };
+     amazon.Login.retrieveProfile(response.access_token, function(response) {
+         alert('Hello, ' + response.profile.Name);
+         alert('Your e-mail address is ' + response.profile.PrimaryEmail);
+         alert('Your unique ID is ' + response.profile.CustomerId);
+         if (window.console && window.console.log)
+         window.console.log(response);
+     });
+ });
     </script>
 </html>
