--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="amazon-root"></div>
     <script type="text/javascript">
-        console.log('onee')
+        console.log('twoo')
         window.onAmazonLoginReady = function() {
         amazon.Login.setClientId('amzn1.application-oa2-client.75c23d174578409eacbbf5c666b10bad');
         };
@@ -23,7 +23,7 @@
         Amazon
     </button>
      <script type="text/javascript">
-     document.getElementById("LoginWithAmazon").onclick() = function() {
+     document.getElementById("LoginWithAmazon").onclick = function() {
      options = {};
   options.scope = 'profile';
   amazon.Login.authorize(options, function(response) {
